--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "igf-genome/igf-genome.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "IGF-1-1.png"
   name             : "Integrated Genome Factory"
   pronouns         : # example: "she/her"  
   bio              : "Unit Layanan Sekuensing Genom dan Multiomik dioperasikan oleh PT DrawINA Biotech Lab"
@@ -32,11 +32,11 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  instagram        : "https://www.instagram.com/igf.genome/"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
   # Repositories and software development
