--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "igf-genome / overview"
+title                    : "Overview"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
@@ -21,20 +21,20 @@ repository               : "igf-genome/igf-genome.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "IGF-1-1.png"
+  avatar           : "profile.png"
   name             : "Integrated Genome Factory"
   pronouns         : # example: "she/her"  
   bio              : "Unit Layanan Sekuensing Genom dan Multiomik dioperasikan oleh PT DrawINA Biotech Lab"
   location         : "Sleman, Yogyakarta"
   employer         : "Universitas Gadjah Mada"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "dblab.seq@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  instagram        : "https://www.instagram.com/igf.genome/"
+  orcid            : #"http://orcid.org/yourorcidurl"
   semantic         : # URL
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
@@ -43,19 +43,19 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "igf-genome"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : #"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : # Username
+  instagram        : "igf.genome"
   lastfm           : # Username
   linkedin         : # Username
   mastodon         : # URL
