--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
+  - title: "Services"
+    url: /services/
+
+  - title: "Facilities"
+    url: /facilities/    
+
+  - title: "Order Guides"
+    url: /order-guides/    
+    
+  - title: "Workshops"
+    url: /workshops/
+        
+  - title: "Internships"
+    url: /internships/
+    
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Contact Us"
+    url: /contact-us/
